# legal-rag-eval

./: .gitignore  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
datasets/: README.md
evals/: README.md
runners/: README.md
