[project]
name = "legal-rag-eval"
version = "0.0.1-alpha"
description = "Open evaluation framework for legal RAG and citation verification systems"
readme = "README.md"
authors = [
    { name = "Apertis", email = "hi@apertis.ai" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["legal", "rag", "evaluation", "benchmark", "citation", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic >= 2.0",
    "httpx >= 0.27",
    "pandas >= 2.0",
    "tqdm >= 4.65",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "ruff >= 0.5",
    "mypy >= 1.10",
]

[project.urls]
Homepage = "https://apertis.ai/verbatim"
Leaderboard = "https://apertis.ai/verbatim/leaderboard"
Repository = "https://github.com/apertis-ai/legal-rag-eval"
Issues = "https://github.com/apertis-ai/legal-rag-eval/issues"

[project.scripts]
legal-rag-eval = "legal_rag_eval.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["legal_rag_eval*"]

[tool.ruff]
line-length = 100
target-version = "py310"
